objects/Course__c.object
<CustomObject><fields>
        <fullName>Allow_Waitlisting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Waitlisting</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Course_Code__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_Description_URL__c</fullName>
        <label>Course Description URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Course_Type__c</fullName>
        <description>This describes if the course is Public or Private for a specific customer.</description>
        <label>Course Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                    <default>true</default>
                    <label>Public</label>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Days_Length_of_course__c</fullName>
        <label>Days (Length of course)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Display_Sort_Order__c</fullName>
        <description>Determines the order in which the courses show up in the accordion component, enrolled classes and available classes on the site pages.</description>
        <inlineHelpText>Determines the order in which the courses show up in the accordion component, enrolled classes and available classes on the site pages.</inlineHelpText>
        <label>Display Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Hours__c</fullName>
        <inlineHelpText>Hours - full hours for course</inlineHelpText>
        <label>Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Paid__c</fullName>
        <inlineHelpText>Specifies if the Self-Paced class for this course is Paid or Free.</inlineHelpText>
        <label>Paid?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Pre_Requisite__c</fullName>
        <description>This is used for displaying on web pages. Not to control enrollments for classes. Display only.</description>
        <inlineHelpText>This is used for displaying on TAH web pages.</inlineHelpText>
        <label>Prerequisite</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Prerequisite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Only relevant for Exams and controls enrollment</description>
        <inlineHelpText>Exam that is required to pass before this exam can be attempted</inlineHelpText>
        <label>Prerequisite</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Prerequisites for:</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Publish_to_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish to Web</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_to_TDS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to send the data to TDS database.</description>
        <label>Send to TDS</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Short_Description__c</fullName>
        <description>This is used for displaying on web pages.</description>
        <inlineHelpText>This is used for displaying on web pages.</inlineHelpText>
        <label>Short Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Siebel_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the Siebel ID of the course</description>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Source_Table__c</fullName>
        <formula>'Course'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Table</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Course</label><nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Courses</pluralLabel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Type__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Publish_to_Web__c</columns>
        <columns>Status__c</columns>
        <columns>Days_Length_of_course__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Exams</fullName>
        <columns>NAME</columns>
        <columns>Course_Type__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Publish_to_Web__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Course__c.Exam</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Exams</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Training_Courses</fullName>
        <columns>NAME</columns>
        <columns>Course_Type__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Publish_to_Web__c</columns>
        <columns>Days_Length_of_course__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Course__c.Training</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Training Courses</label>
        <language>en_US</language>
    </listViews><recordTypes>
        <fullName>Distance_Learning</fullName>
        <active>false</active>
        <description>This is the Record Type for Distance Learning Courses</description>
        <label>Distance Learning</label>
    </recordTypes><recordTypes>
        <fullName>Exam</fullName>
        <active>true</active>
        <description>This Record type is used to create the Certification Exam Master</description>
        <label>Exam</label>
    </recordTypes><recordTypes>
        <fullName>Instructor_Led</fullName>
        <active>false</active>
        <description>This the record type for Instructor Led Courses</description>
        <label>Instructor Led</label>
    </recordTypes><recordTypes>
        <fullName>Self_Paced</fullName>
        <active>false</active>
        <description>This is the record type for Self-Paced Courses</description>
        <label>Self-Paced</label>
    </recordTypes><recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <description>Record type to create non certification course</description>
        <label>Training</label>
    </recordTypes></CustomObject>